fixed spacing between buttons

--- a/GameOfLife/src/view/css/Style.css
+++ b/GameOfLife/src/view/css/Style.css
@@ -8,3 +8,6 @@ Button{
 .normalLabel{
     -fx-font-size: 18pt;
 }
+.renderUI{
+    -fx-font-size: 24pt;
+}
